# Microsoft-Python-BitnetToLumiotic-ONNX

./: .replit  README.md  config.py  main.py  pyproject.toml  weight_utils.py
attached_assets/: Pasted-Statement-of-Work-BitNet-to-ONNX-Conversion-Utility-Project-Title-Development-of-a-Python-based-ON-1748786553607.txt
